# Prime-Numbers

./: Cargo.toml  Readme.md  prime-no.rs
src/: AKS_primalitytest.rs  main.rs  ramanujan.rs
